# auto-ml-train

./: .gitignore  AGENTS-remote.md  AGENTS.md  CLAUDE.md  README.md  abes_engine.py  analysis.ipynb  log.py  prepare.py  program.md  pytest.ini  remote-run.sh  requirements.txt  train.py
.github/: copilot-instructions.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
other_repos/tennis-xgboost-autoresearch/: .gitignore  COMBAT_LOG.md  DATA_LICENSE.md  LICENSE  Makefile  README.md  RESEARCH_LOG.md  gate-atp.sh  gate.sh  program-atp.md  program.md  pyproject.toml  run-research-atp.sh  run-research.sh
other_repos/tennis-xgboost-autoresearch/docs/: atp-loop-audit-2026-03-17.md  baseline-methodology.html  baseline-methodology.md  dataset.html  dataset.md  final-pipeline-audit-2026-03-17.md
other_repos/tennis-xgboost-autoresearch/models/atp/xgboost/: feature_importance.csv  metrics.json  per_tournament.csv  predictions.csv  report.md
other_repos/tennis-xgboost-autoresearch/models/wta/xgboost/: feature_importance.csv  metrics.json  per_tournament.csv  predictions.csv  report.md
other_repos/tennis-xgboost-autoresearch/scripts/: convert_tml_to_sackmann.py  fill_atp_feb_mar_2026.py  fill_wta_nov_dec_2025.py  predict_matchup.py  scrape_grand_slams_wiki.py  scrape_indian_wells_2026.py  scrape_wta_tennisabstract.py
other_repos/tennis-xgboost-autoresearch/src/tennis_predict/: cli.py  config.py  data.py  elo.py  evaluate.py  features.py  models.py
other_repos/tennis-xgboost-autoresearch/tests/: test_elo.py  test_features.py
runner/: AGENTS.md  (+4 more)
(+392 files in other folders)
