[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tennis-xgboost-autoresearch"
version = "0.1.0"
description = "ATP/WTA match prediction with ELO features and XGBoost, designed for auto-research iteration."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nikita Okoneshnikov" }
]
dependencies = [
  "joblib>=1.4.2",
  "numpy>=2.2.0",
  "pandas>=2.2.3",
  "pyarrow>=18.1.0",
  "scikit-learn>=1.6.1",
  "xgboost>=2.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.4",
]

[project.scripts]
tennis-predict = "tennis_predict.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_predict"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
